# AutonomousNavigation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  monitorOdometer.cpp
Common/include/: LockCircleQueue.hpp  Loop.hpp  RecvPlanningUdp.hpp  RecvRequest.hpp  SocketTool.h  UDP.hpp
Common/src/: SocketTool.cpp
ConfigParameters/: path_planning_config.yaml
ConfigParameters/include/: ConfigParameters.hpp  config_yaml.h  config_yaml.h.in
HWT101/: ReadEulerZ_HWT101.hpp
LcmPub/lcm_files/: file_list.txt  monitor_odometer.lcm
LcmPub/lcm_files/cpp/: lcm_monitor_odometer.hpp
LcmPub/lcm_files/lcmtypes/: lcm_monitor_odometer.java
LcmPub/lcm_files/python/: lcm_monitor_odometer.py
LcmPub/script/: launch_lcm_spy.sh  make_types.sh
Navigation/include/: AutoNavigation.h
Navigation/src/: AutoNavigation.cpp
PathPlanning/include/: AStar.hpp
PathPlanning/src/: AStar.cpp
PathPlanning/testFile/: CMakeLists.txt  combined_grid.txt  grid.h  test_map.h  test_map.h.in
Realtime-SingleLidar/: CMakeLists.txt
Realtime-SingleLidar/lidarOdom/: featureExtraction.cpp
Realtime-SingleLidar/paramFile/: paramParse.cpp  parameter.yaml
Realtime-SingleLidar/src/: lidarMapManage.cpp  main.cpp  singleLidarShare.h
Realtime-SingleLidar/utils/: channel.h  common.h
